# isp-discord-bot

./: README.md  discord-bot.conf  discord-bot.service  pyproject.toml
discord_bot/: db.py  discord_bot.py
